--- a/www/index.html
+++ b/www/index.html
@@ -6,13 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Accidents</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
 </head>
 <body>
 <section class="hero">
     <div class="hero__content">
-        <img src="./media/car-accident.svg" class="hero__image" alt="">
+        <img src="media/car-accident.svg" class="hero__image" alt="">
         <h1 class="hero__title">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h1>
     </div>
 </section>
@@ -110,6 +110,6 @@
 
 </section>
 
-<script src="./index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
