added favicon, added texts

--- a/www/index.html
+++ b/www/index.html
@@ -5,104 +5,127 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Accidents</title>
+    <title>Анализ ДТП в России</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="./media/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./media/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./media/favicon-16x16.png">
+    <link rel="manifest" href="./media/site.webmanifest">
+    <link rel="mask-icon" href="./media/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
 <section class="hero">
     <div class="hero__content">
         <img src="media/car-accident.svg" class="hero__image" alt="">
-        <h1 class="hero__title">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h1>
+        <h1 class="hero__title">Анализ ДТП в России</h1>
     </div>
 </section>
 <section class="content">
     <aside class="content__aside">
         <ul class="content-nav">
-            <li data-section-target="1" class="content-nav__item">de Finibus Bonorum et Malorum</li>
-            <li data-section-target="2" class="content-nav__item">de Finibus Bonorum et Malorum</li>
-            <li data-section-target="3" class="content-nav__item">de Finibus Bonorum et Malorum</li>
-            <li data-section-target="4" class="content-nav__item">de Finibus Bonorum et Malorum</li>
-            <li data-section-target="5" class="content-nav__item">de Finibus Bonorum et Malorum</li>
-            <li data-section-target="6" class="content-nav__item">de Finibus Bonorum et Malorum</li>
-            <li data-section-target="7" class="content-nav__item">de Finibus Bonorum et Malorum</li>
+            <li data-section-target="1" class="content-nav__item">О ДТП в России</li>
+            <li data-section-target="2" class="content-nav__item">История и Тренд</li>
+            <li data-section-target="3" class="content-nav__item">Россия и Мир</li>
+            <li data-section-target="4" class="content-nav__item">Пути решения</li>
+            <li data-section-target="5" class="content-nav__item">Дополнительная информация</li>
         </ul>
     </aside>
     <main class="content__main">
         <div class="content__item content-item" data-section="1">
             <div class="content-item__index">1</div>
             <h2 class="content-item__title">
-                de Finibus Bonorum et Malorum
+                О ДТП в России
             </h2>
             <div class="" id="statistics"></div>
             <p class="content-item__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                С начала 2020-ого года по октябрь в России произошло 105 тысяч ДТП в которых погибло 11 тысяч человек, а
+                ранено 135 тысяч.
+                Это очень много - <a href="https://www.who.int/violence_injury_prevention/road_safety_status/2018/en/"
+                                     target="_blank">по данным ВОЗ</a>, мы на 104 месте по количеству смертей от ДТП в
+                мире за 2018-й год. Это 18 смертей на 100 тысяч человек. Наши соседи в рейтинге - Таджикистан, Камбоджа,
+                Казахстан.
             </p>
-            <div class="content-item__spoiler spoiler" data-content="spoiler_wrapper">
-                <div class="spoiler__preview">
-                    <button class="spoiler__button" data-content="spoiler_button">
-                        <span class="spoiler__text-default">Раскрыть</span>
-                        <span class="spoiler__text-active">Скрыть</span>
-                    </button>
-                </div>
-                <div class="spoiler__content" data-content="spoiler_content">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                </div>
-            </div>
+            <!--            <div class="content-item__spoiler spoiler" data-content="spoiler_wrapper">-->
+            <!--                <div class="spoiler__preview">-->
+            <!--                    <button class="spoiler__button" data-content="spoiler_button">-->
+            <!--                        <span class="spoiler__text-default">Раскрыть</span>-->
+            <!--                        <span class="spoiler__text-active">Скрыть</span>-->
+            <!--                    </button>-->
+            <!--                </div>-->
+            <!--                <div class="spoiler__content" data-content="spoiler_content">-->
+            <!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum-->
+            <!--                </div>-->
+            <!--            </div>-->
 
         </div>
         <div class="content__item content-item" data-section="2">
             <div class="content-item__index">2</div>
             <h2 class="content-item__title">
-                de Finibus Bonorum et Malorum
+                Тренд
             </h2>
             <p class="content-item__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                ГИБДД представляет полные данные за последний год.
+                Ключевое:
+                <br>
+            <ul>
+                <li>164358 ДТП</li>
+                <li>16981 погибло</li>
+                <li>210877 ранено</li>
+                <li>48734 случая ДТП с пешеходами, 4917 человека погибло</li>
+                <li>24820 ДТП с пострадавшими детьми, 794 погибло</li>
+            </ul>
+            <img src="./media/accident_count.png" alt="">
+            <img src="./media/death_count.png" alt="">
+
             </p>
         </div>
         <div class="content__item content-item" data-section="3">
             <div class="content-item__index">3</div>
             <h2 class="content-item__title">
-                de Finibus Bonorum et Malorum
+                Россия и Мир
             </h2>
             <p class="content-item__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                В 2018-ом году ВОЗ подготовил большой отчёт по ДТП в мире.
+                Согласно ему, в России 18 смертей на 100 тысяч человек, и мы занимаем 104-ое место из по смертности на
+                дорогах.
+                <br>
+                Для сравнения:
+            <ul>
+                <li>Украина занимает 73-е место, и 13.7 смертей на 100 тысяч;</li>
+                <li>США - 64-е место и 12,4 смерти;</li>
+                <li>Германия - 11-е место и 4.1 смерть;</li>
+            </ul>
+            Всего в мире погибло 1.35 миллиона человек. Больше половины - это пешеходы, велосипедисты и мотоциклисты. А
+            ДТП это первая причина смертности детей от 5 до 15 лет.
+            <br>
+            Полные данные можно найти тут:
+            <br>
+            <a href="https://www.who.int/violence_injury_prevention/road_safety_status/2018/en/" target="_blank">https://www.who.int/violence_injury_prevention/road_safety_status/2018/en/</a>
             </p>
         </div>
         <div class="content__item content-item" data-section="4">
             <div class="content-item__index">4</div>
             <h2 class="content-item__title">
-                de Finibus Bonorum et Malorum
+                Пути решения
             </h2>
             <p class="content-item__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                Vision zero -  международная программа по снижению смертности на дорогах. Она пришла из Швеции, где принята с 1997-ого года и сейчас в ней участвуют многие развитые страны.
+                Основная идея - смертность на дорогах должна стремиться к нулю и не является неизбежным злом автомобилизации. Это может получиться при правильном проектировании и строительстве дорог.
             </p>
         </div>
         <div class="content__item content-item" data-section="5">
             <div class="content-item__index">5</div>
             <h2 class="content-item__title">
-                de Finibus Bonorum et Malorum
+                Дополнительная информация
             </h2>
             <p class="content-item__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-            </p>
-        </div>
-        <div class="content__item content-item" data-section="6">
-            <div class="content-item__index">6</div>
-            <h2 class="content-item__title">
-                de Finibus Bonorum et Malorum
-            </h2>
-            <p class="content-item__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-            </p>
-        </div>
-        <div class="content__item content-item" data-section="7">
-            <div class="content-item__index">7</div>
-            <h2 class="content-item__title">
-                de Finibus Bonorum et Malorum
-            </h2>
-            <p class="content-item__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                Статистика ДТП в России: <a href="http://stat.gibdd.ru/" target="_blank">http://stat.gibdd.ru/</a><br>
+                Смертность в России: <a href="https://rosstat.gov.ru/folder/12781" target="_blank">https://rosstat.gov.ru/folder/12781</a><br>
+                Исследование ВОЗ: <a href="https://www.who.int/violence_injury_prevention/road_safety_status/2018/en/"
+                                     target="_blank">https://www.who.int/violence_injury_prevention/road_safety_status/2018/en/</a>
             </p>
         </div>
 
