--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Анализ ДТП в России</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="./media/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./media/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./media/favicon-16x16.png">
