--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Анализ ДТП в России</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Roboto+Slab:wght@300&display=swap"
+          rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="./media/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./media/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./media/favicon-16x16.png">
@@ -48,17 +49,7 @@
                 мире за 2018-й год. Это 18 смертей на 100 тысяч человек. Наши соседи в рейтинге - Таджикистан, Камбоджа,
                 Казахстан.
             </p>
-            <!--            <div class="content-item__spoiler spoiler" data-content="spoiler_wrapper">-->
-            <!--                <div class="spoiler__preview">-->
-            <!--                    <button class="spoiler__button" data-content="spoiler_button">-->
-            <!--                        <span class="spoiler__text-default">Раскрыть</span>-->
-            <!--                        <span class="spoiler__text-active">Скрыть</span>-->
-            <!--                    </button>-->
-            <!--                </div>-->
-            <!--                <div class="spoiler__content" data-content="spoiler_content">-->
-            <!--                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum-->
-            <!--                </div>-->
-            <!--            </div>-->
+
 
         </div>
         <div class="content__item content-item" data-section="2">
@@ -112,9 +103,92 @@
                 Пути решения
             </h2>
             <p class="content-item__text">
-                Vision zero -  международная программа по снижению смертности на дорогах. Она пришла из Швеции, где принята с 1997-ого года и сейчас в ней участвуют многие развитые страны.
-                Основная идея - смертность на дорогах должна стремиться к нулю и не является неизбежным злом автомобилизации. Это может получиться при правильном проектировании и строительстве дорог.
+                Vision zero - международная программа по снижению смертности на дорогах. Она пришла из Швеции, где
+                принята с 1997-ого года и сейчас в ней участвуют многие развитые страны.
+                Основная идея - смертность на дорогах должна стремиться к нулю и не является неизбежным злом
+                автомобилизации. Это может получиться при правильном проектировании и строительстве дорог.
             </p>
+            <div class="content-item__spoiler spoiler" data-content="spoiler_wrapper">
+                <div class="spoiler__preview">
+                    <button class="spoiler__button" data-content="spoiler_button">
+                        <span class="spoiler__text-default">Раскрыть</span>
+                        <span class="spoiler__text-active">Скрыть</span>
+                    </button>
+                </div>
+                <div class="spoiler__content" data-content="spoiler_content">
+                    <div>Швеция</div>
+                    <p>
+                        В первую очередь, в рамках проекта власти пересмотрели дорожную систему страны и занялись
+                        усовершенствованием трасс. В населенных пунктах скорость ограничили 50, а где-то даже 30 км/
+                        час,
+                        встречные потоки на автострадах, а также велосипедные дорожки отгородили разделителями, сами же
+                        дороги начали проектировать по схеме «2+1». То есть 3-полосная дорога приобрела 2 ряда в одном
+                        направлении и одну встречную полосы, причем друг от друга ряды отделены тросовыми ограждениями.
+                    </p>
+                    <p>
+                        Такие трассы стали не только в разы безопаснее, но и удобнее для водителей, которые получили
+                        возможность обгонять по левому ряду.
+                    </p>
+                    <div>Великобритания.</div>
+                    <p>Великобритания стремится к нулевой смертности на дорогах, реализуя свою версию шведской программы
+                        «Vision Zero», с помощью которой уже удалось снизить смертность до 116 человек в год.</p>
+                    <p>
+                        Философия программы состоит в том, что каждая человеческая жизнь бесценна и любое количество
+                        смертей
+                        на дорогах чудовищно, пока оно не равняется нулю. Поэтому англичане стараются:
+                    </p>
+                    <ul>
+                        <li>максимально снизить скорость городского трафика;</li>
+                        <li>создать привлекательные условия для пользования общественным и альтернативным транспортом, в
+                            том числе велосипедами;
+                        </li>
+                        <li>обезопасить перекрестки, где наиболее часто гибнут пешеходы;</li>
+                        <li>повышать безопасность транспортных средств.</li>
+                    </ul>
+                    <div>Сан-Марино</div>
+                    <p>
+                        Сан-Марино может похвастаться очень суровыми правилами движения и штрафными санкциями за их
+                        нарушение: вождение с сигаретой, в наушниках и с не пристегнутым ремнем карается штрафом в 100
+                        евро,
+                        а за первую же поимку в нетрезвом состоянии водитель сразу лишается прав на срок от 1 до 6
+                        месяцев.
+                    </p>
+                    <p>
+                        В 2014 году зафиксирован всего 1 смертельный инцидент на дороге за весь год, что является самым
+                        лучшим результатом за всю историю страны.
+                    </p>
+
+                    <div>Нидерланды</div>
+                    <p>
+                        Всего 3,4 жертвы на 100 тысяч человек, и то при том, что допустимое содержание алкоголя в крови
+                        для
+                        водителей этой страны составляет 1,3 промилле, то есть абсолютно невменяемое состояние.
+                    </p>
+                    <p>
+                        Однако еще с 1990-х годов правительство Нидерландов разработало концепцию «устойчивой
+                        безопасности»,
+                        представляющую собой системный подход к предотвращению аварий. При содействии специалистов
+                        Института
+                        по изучению дорожной безопасности стало понятно, на что водители реагируют подсознательно.
+                    </p>
+                    <p>
+                        Например, широкая трасса как бы просит разогнаться по ней с максимальной допустимой скоростью,
+                        тогда
+                        как узкие дороги поневоле вынуждают эту самую скорость сбросить. Поэтому дороги в стране
+                        проектируют
+                        таким образом, чтобы они не ассоциировались с автострадой и не вызывали желание повысить
+                        скорость.
+                    </p>
+                    <p>
+                        Схожим образом действуют на водителей и прочие элементы дороги: наличие или отсутствие деревьев
+                        вдоль дорожного полотна, полосы для общественного транспорта, препятствия, разметка и
+                        ограждения.
+                        Специалисты утверждают, что водители интуитивно понимают, как необходимо вести себя на той или
+                        иной
+                        дороге.
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="content__item content-item" data-section="5">
             <div class="content-item__index">5</div>
